fix: Add left and right spacing to title (Close #4)

--- a/src/css/content.css
+++ b/src/css/content.css
@@ -1,5 +1,5 @@
 .content__title {
-  margin: 0.5em 0 1em;
+  margin: 0.5em var(--container-padding) 1em;
 
   font-size: calc(1.25em + 2.5vw);
   text-align: center;
