--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -13,6 +13,6 @@
   --container-width: 70rem;
   --container-padding: 1rem;
 
-  --content-hero-bleed: 10em;
+  --content-hero-bleed: 10rem;
   --content-inner-width: 40rem;
 }
